--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,5 +6,18 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="io.seroo.sampleplayer.home.HomeFragment"
-        android:label="HomeFragment" />
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="io.seroo.sampleplayer.detail.DetailFragment"
+        android:label="DetailFragment" >
+        <argument
+            android:name="audioDTO"
+            app:argType="io.seroo.sampleplayer.home.AudioDTO"
+            />
+    </fragment>
 </navigation>
